# lawbreaker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Instructions1.md  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  hf-benchmark.yml  hf-upload.yml
docs/: adding-laws.md  connectors.md  how-it-works.md  index.md  trap-design.md  uncertainty.md
examples/: export_kaggle.py  generate_graphs.py  hf_readme.md  push_results.py  run_anthropic.py  run_gemini.py  run_huggingface.py  run_ollama.py  run_openai.py
lawbreaker/: __init__.py  cli.py  leaderboard.py  runner.py
lawbreaker/connectors/: __init__.py  anthropic_connector.py  base.py  gemini_connector.py  huggingface_connector.py  ollama_connector.py  openai_connector.py
lawbreaker/core/: __init__.py  question.py  result.py  uncertainty.py  verifier.py
lawbreaker/laws/: __init__.py  base.py  bernoulli.py  boyle.py  capacitance.py  centripetal.py  chain_heat_height.py  chain_newton_ke.py  chain_ohm_kvl.py  chain_ohm_power.py  chain_pe_speed.py  chain_spring_launch.py  coulomb.py  drag_force.py  energy_conservation.py  gravitational_force.py  gravitational_pe.py  hooke.py  ideal_gas.py  kinetic_energy.py  kirchhoff_current.py  kirchhoff_voltage.py  lens_equation.py  magnetic_force.py  momentum.py  newton_second.py  ohm.py  pendulum.py  power.py  rc_circuit.py  snell.py  specific_heat.py  stefan_boltzmann.py  thermal_expansion.py  wave_speed.py  work_energy.py
tests/: test_uncertainty.py  test_verifier.py
tests/test_connectors/: __init__.py  test_mock_connector.py
tests/test_laws/: __init__.py  test_all_laws.py  test_newton.py  test_ohm.py
