[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawbreaker"
version = "0.1.0"
description = "Adversarial evaluation framework for LLMs & AI agents — grounded in physics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "LawBreaker Contributors"},
]
keywords = ["benchmark", "llm", "physics", "adversarial", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "sympy>=1.12",
    "pint>=0.23",
    "click>=8.1",
    "openai>=1.0",
    "anthropic>=0.20",
    "huggingface_hub>=0.20",
    "google-genai>=1.0",
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1",
]

[project.scripts]
lawbreaker = "lawbreaker.cli:main"

[project.urls]
Homepage = "https://github.com/lawbreaker-benchmark/lawbreaker"
Repository = "https://github.com/lawbreaker-benchmark/lawbreaker"
Documentation = "https://github.com/lawbreaker-benchmark/lawbreaker#readme"

[tool.setuptools.packages.find]
include = ["lawbreaker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
